--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
