--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [build]
   publish = "dist"
-  command = "ci = npm i && npm run build"
+  command = "npm i && npm run build"
 
 [[redirects]]
   from = "/*"
