--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --port 3000 --open",
-    "build": "react-scripts build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
     "lint": "eslint . --ext .ts, .tsx, .js",
