--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   "dependencies": {
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.1",
     "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-recaptcha-v3": "^1.10.0",
     "react-router-dom": "^6.3.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
+    "@types/qrcode": "^1.4.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
